src/style.css
* {
    box-sizing: border-box;
}

body {
    background-image: url("./assets/stars.png");
    background-color: #000111;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: auto;
    margin: 0;    
}
/* Box for the two sliding doors, left-door and right-door */
.door-container {
    display: flex;
    align-items: center;
    place-content: center;
    position: absolute;
}

.right-door {
    width: 50vw;
    height: 100vh;
    background-color: rgba(72, 33, 33, 0.975);
    color: #EED;
    position: absolute;
    border-left: 4px solid;/*jjjjj*/
    left: 0; /* IMPORTANT! the zero reference starts from the flex items' start, it's not from zero of page */
    z-index: 3;
    transition-property: left;
    transition-duration: 3s;
    transition-delay: 1s;
    transition-timing-function: linear;
    /* or ease */
}
.left-door {
    width: 50vw;
    height: 100vh;    
    position: absolute;
    z-index: 3;
    border-right: 4px solid brown;
    background-color: rgba(72, 33, 33, 0.975);
    color: #EED;
    right: 0;
    transition-property: right;
    transition-duration: 3s;
    transition-delay: 1s;
    transition-timing-function: linear;
    /* or ease */
}

/* Action to open right door */
.right-open {
    left: 50vw;   /* 50vw from the left reference point; not really moving in left direction*/
}
/* Action to open left door */
.left-open {
    right: 50vw; /* 50vw from the right reference point; not really moving in rightwards*/
}

.right-closed {
    left: 0;    
}
.left-closed {
    right: 0;    
}

/* The right and left doors paragraph elements */
.rt-door, .lt-door {
    position: relative;
    top: 40%;
    font-weight: bolder;
}
.lt-door {
    left: 16vw;
}
.rt-door{
    left: min(5%, 50vw);
}

/* Buttons used to operate the doors */
.btn-open img, .btn-open, .btn-close {
    width: 100%;
    margin-left: -17vw;
    background: none;
    border: none;
}
.btn-open, .btn-close{
    position: absolute;
    top: 50%;
    right: 20%;
    height:  7vh;
    width: 25vw;    
    border-radius: 9px;
    background-color: #EED;
    box-shadow: 0 0 3px 2px #BE9FAF;
    font-weight: bold;
    font-size: 1.0rem;
}
.btn-close {
    position: unset;
    background-color: rgba(127, 255, 212, 0.5);
    color: #EEE;
    float: left;
    margin: 3% 6%;
}

/* App container */
.container {
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    padding-inline: 5%; 
    flex-direction: column;
}

main{
    /* margin: auto; */
    background-color:rgba(11, 36, 71, 0.55);
    border-radius: 0.7rem;
    padding: 1.0rem;
    color: aliceblue;
    text-align: center;
    border: 1px solid aquamarine;
    min-height: 460px;
    overflow: auto;
    height: auto;
    margin-bottom: 0;

}
.my-contacts {
    margin-top: 0;
}

/* App title */
.title {
    font-family: 'Merienda', cursive;
    font-size: 1.9rem;
    margin-block: 0;
    color: aquamarine;
}

.task-progress, .task-progress-message {
    font-size: 1.2rem;
    padding-inline: 10%;
    font-family: 'EB Garamond', serif;
}
.task-progress-message {
    margin-block-start: 0;
    font-style: italic;
    font-size: 1.0rem;
    margin-block-end: 0.9rem;
}

.projects-container {
    background-image: url("./assets/landscape3.png");
    background-size: cover;
    background-position: center;
    background-color: rgb(199, 119, 119);
    background-repeat: no-repeat;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
    border: 1px solid aquamarine;
    font-size: 1.05rem;
}

.projects-container input[type="text"] {
    background-color: #B9FAEF;
    border-radius: 0.5rem;
    font-weight: bold;
    width: 100%;
}

/* Input placeholder */
::placeholder{
    color: aquamarine;
}

/* Form  */
.project-form {
    border: 1px solid aquamarine;
    padding: 0.2rem 0.5rem;
    border-top-left-radius: 1rem;
    border-top-right-radius: 1rem;
    display: flex;
    gap: 1px;
    overflow-y: auto;
}
.project-form input {
    background: none;
    text-align: center;
    border-radius: 0.5rem;
    border: none;
}
.project-form input[type="text"]{    
    font-size: 1.1rem;
    flex-grow: 1;
    color: #FFF;
    width: 100%;
}

.input-btn{
    min-height: 33px;
    min-width: 33px;
    border-radius: 0.7rem;
    font-size: 1.7rem;
    line-height: 1.7rem;
    padding: 0;
    margin-inline-start: 0.3rem;
    cursor: pointer;
    /* background-color: aquamarine; */
    background-color: rgba(120, 46, 7, 0.8);
    color: aquamarine;
}

/* Edit mode styling  */
.project-not-completed, .project-completed {
    display: flex;
    background-color: rgba(33, 42, 62, 0.7); 
    justify-content: space-between;
    align-items: center;
    font-size: 1.1rem;
    padding: 0.15rem 0 0.15rem 0.5rem;
    text-align: left;
    /* rgba(33, 42, 62, 0.6) rgba(136, 74, 57, 0.6) */
}

.project-completed {
    color: rgb(185, 237, 221, 0.5) ;
    text-decoration: line-through;
}

/* FontAwesome trash icon */
.fa-icon-tr{
    cursor: pointer;
    color: rgba(127, 255, 212, 0.6) ;
    /* #7C9070; #79E0EE */
}

/* FontAwesome square and squareChecked icons */
.fa-icon-sq, .fa-icon-sqc {
    color: rgba(127, 255, 212, 0.9);
    cursor: pointer;
    padding: 0;
    margin: 0;
    border: 1px solid aquamarine;
    border-radius: 0.3rem;
}

.fa-icon-sqc{
    color: rgb(185, 237, 221, 0.5)  ;
    border: 1px solid rgb(185, 237, 221, 0.5);
}

/* Toggle complete icons */
.modification-icons {
    display: flex;
    gap: 3px;
    padding-right: 0.3rem;
}

.project-title {
    flex-grow: 1;
}

/* Footer section */
.socials {
    background-color: rgba(127, 255, 212, 0.3);
    width: 80vw;
    min-width: 280px;
    max-width: 650px;
    padding: 0 0.3rem;
    border-top-left-radius: 0.2rem;
    border-top-right-radius: 0.2rem;
    display: flex;
    place-items: center;
    justify-content: center;
    column-gap: min( 1rem, 3%, 20px );
    margin-block-start: 0.5rem;
    margin-inline: auto;
    color: #FFE;
    margin-bottom: 0;
}

.fa-icons{
    display: flex;
    place-items: center;
    column-gap: 0.5rem;
    border-radius: 0.5rem;
    padding: 0.3rem;
    font-size: 0.5rem;
    background-color: rgba(127, 255, 212, 0.3);
}

.fa-icons [class*="fa-"] {
    color: rgba(11, 36, 71, 0.99);
    /* #00acee; */
    font-size: 1.2rem;font-weight: b;
}
.copyrights {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-bottom-left-radius: 0.2rem;
    border-bottom-right-radius: 0.2rem;
    background-color: rgba(127, 255, 212, 0.25);
}
.copyrights hr {
    margin-top: 0;
    border: 1px solid rgba(185, 237, 221, 0.3);
    width: 100%;
}
.copyrights-name {
    padding-bottom: 0.1rem;
    color: #FFF;
}


 /* extra small smart phones */
@media screen and (min-width: 300px){
    main {
        max-width: 291px;
        padding-inline: 1.5%;
        height: auto;
    }
    .title {
    font-size: 1.3rem;
    }
    .project-form{
        justify-content: space-around;
        width: 100%;
    }
}

 /* wider smart phones */
@media screen and (min-width: 481px)  {
    .title {
        font-size: 1.3rem;
    }
    .task-progress, .task-progress-message {
        font-size: 1.3rem;
    }
    .project-title{
        font-size: 1.4rem;
    }
    .modification-icons {
        gap: 4px;
    }
    .fa-icon-sq, .fa-icon-sqc, .fa-icon-tr{
        font-size: 24px;
    }
}

/* Small devices upwards */
@media screen and (min-width: 768px)  {
    .btn-open, .btn-close{
        width: 18vw;
        right: 27vw;
    }
    .lt-door {
        left: 35vw;
    }
    main {
        width: 650px;
        max-width: 800px;
        height: auto;
    }
    .title {
        font-size: 2.6rem;
    }

    .task-progress, .task-progress-message {
        font-size: 1.2rem;
    }
    ::placeholder {
        font-size: 1.3rem;
    }
    .project-title{
        font-size: 1.5rem;
        padding-right: 0.6rem;
    }
    .modification-icons {
        gap: 6px;
        padding-right: 0.6rem;
    }
    .connect-copyrights {
        font-size: 0.9rem;
    }
    .fa-icon-sq, .fa-icon-sqc, .fa-icon-tr{
        font-size: 30px;
    }
}

@media screen and (max-height: 400px) and (orientation: landscape) {
    body {
        padding: 2%;
    }
    main {
        max-height: 420px;
        width: 100%;
        min-height: unset;
    }
    .title {
        font-size: 1.7rem;
        margin: 0.1rem;
        padding-inline: 2%;
    }
    .task-progress, .task-progress-message {
        font-size: 1.3rem;
        margin: 0.1rem;
        padding-inline: 2%;
        margin-bottom: 0.3rem;
    }
    .project-form {
        height: 1.7rem;
        border-top-left-radius: 6px;
        border-top-right-radius: 6px;
    }
    .input-btn {
        min-width: 1.3rem;
        min-height: unset;
        font-size: 1.1rem;
        line-height: 1.0rem;
        border-radius: 3px;
    }
    ::placeholder {
        font-size: 1.1rem;
        padding: 2%;
    }
    .project-title{
        font-size: 1.1rem;
        padding-right: 0.6rem;
    }
    .modification-icons {
        gap: 6px;
        padding-right: 0.6rem;
    }
    .fa-icon-sq, .fa-icon-sqc, .fa-icon-tr{
        font-size: 15px;
    }
}

@media screen and (min-width: 1024px)  {
    .lt-door{
        left: 40vw;
    }
}

